syntax = "proto3";

package flow_like_types;

import "variable.proto";

message CompiledVariable {
    string id = 1;
    bytes default_value = 2;
    VariableType data_type = 3;
    ValueType value_type = 4;
    bool exposed = 5;
    bool secret = 6;
    bool editable = 7;
}
